add myTravel table

--- a/travel.html
+++ b/travel.html
@@ -1,24 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>My Travel List</title>
+<title>All Travel List</title>
 <meta charset="UTF-8">
 </head>
 <body>
-    <a href="/team18/insertTravel.html" target="_blank">
-        <button>Insert Travel</button>
-    </a><br>
-    <a href="/team18/updateTravel.html" target="_blank">
-        <button>Update Travel</button>
-    </a><br>
-    <a href="/team18/deleteTravel.html" target="_blank">
-        <button>Delete Travel</button>
-    </a><br>
-    <a href="/team18/searchTravel.html" target="_blank">
-        <button>Search</button>
-    </a><br>
-    <a href="/team18/expense.html" target="_blank">
-        <button>Show Expense</button>
+    <a href="/team18/myTravel.php" target="_blank">
+        <button>Back</button>
     </a><br>
     <?php include("getTravelList.php"); ?>
 </body>
