--- a/expense.html
+++ b/expense.html
@@ -5,6 +5,9 @@
 <meta charset="UTF-8">
 </head>
 <body>
+    <a href="/team18/myTravel.php" target="_blank">
+        <button>Back</button>
+    </a><br>
     <?php include("expense.php"); ?>
 </body>
 </html>
