--- a/searchWeather.html
+++ b/searchWeather.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-
+<h1>Search Weather</h1>
     <form method="get" action="searchWeather.php">
 		<input class=textform type=text name=search id="search_box" autocomplete="off" placeholder="도시를 입력하세요." required>
 		<input class=submit type=submit value=검색>
