--- a/search.html
+++ b/search.html
@@ -18,9 +18,14 @@
     <a href="/team18/searchTransportation.php" target="_blank">
         <button>Search Transportation</button>
     </a><br>
+    <a href="/team18/selectCountry.html" target="_blank">
+        <button>Search Currency Rate and Languages</button>
+    </a><br>
+    <a href="/team18/souvenir.php" target="_blank">
+        <button>Search Souvenir</button>
+    </a><br>
     <a href="/team18/myTravel.php" target="_blank">
         <button>Go Home</button>
-    </a><br>
     </a><br>
 
 </body>
