--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>Search</title>
+<title>Advanced Search</title>
 <meta charset="UTF-8">
 </head>
 <body>
@@ -12,7 +12,7 @@
     <a href="/team18/searchRestaurant.php" target="_blank">
         <button>Search Restaurant</button>
     </a><br>
-    <a href="/team18/searchWeather.php" target="_blank">
+    <a href="/team18/searchWeather.html" target="_blank">
         <button>Search Weather</button>
     </a><br>
     <a href="/team18/searchTransportation.php" target="_blank">
@@ -24,6 +24,13 @@
     <a href="/team18/souvenir.php" target="_blank">
         <button>Search Souvenir</button>
     </a><br>
+    <a href="/team18/searchRanking.html" target="_blank">
+        <button>Search Ranking</button>
+    </a><br>
+    <a href="/team18/expense.html" target="_blank">
+        <button>Show Expense</button>
+    </a><br>
+
     <a href="/team18/myTravel.php" target="_blank">
         <button>Go Home</button>
     </a><br>
