--- a/updateTravel.html
+++ b/updateTravel.html
@@ -23,6 +23,9 @@ Select City<br>
 <input type="date" name="endDate" size="50">
 <br><br><input type="submit" name="submit" value="Update"> 
 </form>
+<a href="/team18/myTravel.php" target="_blank">
+    <button>Back</button>
+</a><br>
 
 <?php
 
