--- a/insertTravel.html
+++ b/insertTravel.html
@@ -23,5 +23,8 @@ Select City<br>
 <input type="date" name="endDate" size="50">
 <br><br><input type="submit" name="submit" value="Submit"> 
 </form>
+<a href="/team18/myTravel.php" target="_blank">
+    <button>Back</button>
+</a><br>
 </body>
 </html>
