--- a/search.html
+++ b/search.html
@@ -24,7 +24,7 @@
     <a href="/team18/souvenir.php" target="_blank">
         <button>Search Souvenir</button>
     </a><br>
-        <a href="/team18/searchRanking.html" target="_blank">
+        <a href="/team18/ranking.php" target="_blank">
         <button>Search Ranking</button>
     </a><br>
     <a href="/team18/expense.html" target="_blank">
