--- a/searchHotel.html
+++ b/searchHotel.html
@@ -33,6 +33,9 @@
             <input type="submit" value="Search">
         </form>
     </div>
+    <br><a href="/team18/search.html" target="_blank">
+        <button>Back</button>
+    </a><br>
 </body>
 
 </html>
