modify souvenir & hotel

--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
     <a href="/team18/selectCountry.html" target="_blank">
         <button>Search Currency Rate and Languages</button>
     </a><br>
-    <a href="/team18/souvenir.php" target="_blank">
+    <a href="/team18/souvenir.html" target="_blank">
         <button>Search Souvenir</button>
     </a><br>
         <a href="/team18/ranking.php" target="_blank">
