--- a/souvenir.html
+++ b/souvenir.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search City</title>
+    <title>Select City</title>
     <style>
         body {
             font-family: Consolas, monospace;
@@ -25,9 +25,9 @@
 
 <body>
     <div class="search">
-        <form method="POST" action="searchHotel.php">
+        <form method="POST" action="souvenir.php">
             Select City<br><br>
-            <select name='city_name' id='city'>
+            <select name='city' id='city'>
                 <?php include("getCityList.php"); ?>
             </select>
             <input type="submit" value="Search">
