--- a/selectCountry.html
+++ b/selectCountry.html
@@ -10,6 +10,7 @@
 <form action="" method="get">
     <label for="country">Select Country:</label>
     <select name="country_name" id="country">
+        <option value="" selected disabled>Select a country</option>
         <option value="France">France</option>
         <option value="Czech Republic">Czech Republic</option>
         <option value="Swiss">Swiss</option>
