add back button
add back button

--- a/ranking.html
+++ b/ranking.html
@@ -56,6 +56,9 @@
             }
         }
     </script>
+    <br><a href="/team18/search.html" target="_blank">
+        <button>Back</button>
+    </a><br>
 
 </body>
 </html>
