--- a/selectCountry.html
+++ b/selectCountry.html
@@ -26,15 +26,15 @@
         var country = document.getElementById("country");
         var country_name = country.options[country.selectedIndex].value;
         if(country_name == "France"){
-            alert("France's currency is Euro and language is French");
+            alert("France's exchange rate is 1405.42 and language is 프랑스어");
         }else if(country_name == "Czech Republic"){
-            alert("Czech Republic's currency is Czech koruna and language is Czech");
+            alert("Czech Republic's exchange rate is 57.58 and language is 체코어, 실레시아어");
         }else if(country_name == "Swiss"){
-            alert("Swiss's currency is Swiss franc and language is German, French, Italian, Romansh");
+            alert("Swiss's exchange rate is 1456.09 and language is 독일어");
         }else if(country_name == "UK"){
-            alert("UK's currency is Pound sterling and language is English");
+            alert("UK's exchange rate is 1620.10 and language is 영어");
         }else if(country_name == "Italia"){
-            alert("Italia's currency is Euro and language is Italian");
+            alert("Italia's exchange rate is 1405.42 and language is 이탈리아어");
         }else{
             alert("Please select a country");
         }
