--- a/expense.html
+++ b/expense.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
-    <a href="/team18/myTravel.php" target="_blank">
+    <a href="/team18/search.html" target="_blank">
         <button>Back</button>
     </a><br>
     <?php include("expense.php"); ?>
