--- a/searchWeather.html
+++ b/searchWeather.html
@@ -35,6 +35,8 @@
 		<input class=submit type=submit value=검색>
 	</form> 
 	
-
+  <br><a href="/team18/search.html" target="_blank">
+        <button>Back</button>
+    </a><br>
 </body>
 </html>
