--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Search</h1>
-<a href="/team18/searchHotel.html" target="_blank">
+<a href="/team18/searchHotel.php" target="_blank">
         <button>Search Hotel</button>
     </a><br>
     <a href="/team18/searchRestaurant.php" target="_blank">
@@ -21,13 +21,13 @@
     <a href="/team18/selectCountry.html" target="_blank">
         <button>Search Currency Rate and Languages</button>
     </a><br>
-    <a href="/team18/souvenir.html" target="_blank">
+    <a href="/team18/souvenir.php" target="_blank">
         <button>Search Souvenir</button>
     </a><br>
         <a href="/team18/ranking.php" target="_blank">
         <button>Search Ranking</button>
     </a><br>
-    <a href="/team18/expense.html" target="_blank">
+    <a href="/team18/expense.php" target="_blank">
         <button>Show Expense</button>
     </a><br>
 
