--- a/searchWeather.html
+++ b/searchWeather.html
@@ -35,7 +35,7 @@
 		<input class=submit type=submit value=검색>
 	</form> 
 	
-  <br><a href="/team18/search.html" target="_blank">
+  <br><a href="/team18/search.html">
         <button>Back</button>
     </a><br>
 </body>
