modify back button
modify back button

--- a/ranking.html
+++ b/ranking.html
@@ -34,9 +34,7 @@
             }
         }
     </script>
-    <br><a href="/team18/search.html" target="_blank">
-        <button>Back</button>
-    </a><br>
+   <button onclick="history.back()">Back</button>
 
 </body>
 </html>
