modify back button
modify back button

--- a/search.html
+++ b/search.html
@@ -31,9 +31,7 @@
         <button>Show Expense</button>
     </a><br>
 
-    <a href="/team18/myTravel.php" target="_blank">
-        <button>Go Home</button>
-    </a><br>
+    <button onclick="history.back()">Back</button>
 
 </body>
 </html>
