--- a/searchWeather.html
+++ b/searchWeather.html
@@ -35,8 +35,6 @@
 		<input class=submit type=submit value=검색>
 	</form> 
 	
-  <br><a href="/team18/search.html">
-        <button>Back</button>
-    </a><br>
+ <button onclick="history.back()">Back</button>
 </body>
 </html>
