--- a/selectCountry.html
+++ b/selectCountry.html
@@ -62,7 +62,7 @@
         }
     </script>
 
-    <button onclick="history.back()">Go Back</button>
+    <button onclick="history.back()">Back</button>
 
 </body>
 </html>
