--- a/search.html
+++ b/search.html
@@ -6,28 +6,28 @@
 </head>
 <body>
 <h1>Search</h1>
-<a href="/team18/searchHotel.php" target="_blank">
+<a href="/team18/searchHotel.php" target="_self>
         <button>Search Hotel</button>
     </a><br>
-    <a href="/team18/searchRestaurant.php" target="_blank">
+    <a href="/team18/searchRestaurant.php" target="_self">
         <button>Search Restaurant</button>
     </a><br>
-    <a href="/team18/searchWeather.html" target="_blank">
+    <a href="/team18/searchWeather.html" target="_self">
         <button>Search Weather</button>
     </a><br>
-    <a href="/team18/searchTransportation.php" target="_blank">
+    <a href="/team18/searchTransportation.php" target="_self">
         <button>Search Transportation</button>
     </a><br>
-    <a href="/team18/selectCountry.html" target="_blank">
+    <a href="/team18/selectCountry.html" target="_self">
         <button>Search Currency Rate and Languages</button>
     </a><br>
-    <a href="/team18/souvenir.php" target="_blank">
+    <a href="/team18/souvenir.php" target="_self">
         <button>Search Souvenir</button>
     </a><br>
-        <a href="/team18/ranking.php" target="_blank">
+        <a href="/team18/ranking.php" target="_self">
         <button>Search Ranking</button>
     </a><br>
-    <a href="/team18/expense.php" target="_blank">
+    <a href="/team18/expense.php" target="_self">
         <button>Show Expense</button>
     </a><br>
 
