--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Search</h1>
-<a href="/team18/searchHotel.php" target="_self>
+<a href="/team18/searchHotel.php" target="_self">
         <button>Search Hotel</button>
     </a><br>
     <a href="/team18/searchRestaurant.php" target="_self">
