--- a/search.html
+++ b/search.html
@@ -31,7 +31,9 @@
         <button>Show Expense</button>
     </a><br>
 
-    <button onclick="history.back()">Back</button>
+    <a href="/team18/myTravel.php" target="_self">
+        <button>Back</button>
+    </a><br>
 
 </body>
 </html>
